add problem detail routing but not clickable yet

--- a/oj-client/src/app/components/problem-detail/problem-detail.component.html
+++ b/oj-client/src/app/components/problem-detail/problem-detail.component.html
@@ -1,3 +1,10 @@
-<p>
-  problem-detail works!
-</p>
+<div class = "container">
+  <div class = "col-sm-12 col-md-10">
+    <h3>
+      {{problem.id}}.{{problem.name}}
+    </h3>
+    <p>
+      {{problem.desc}}
+    </p>
+  </div>
+</div>
