--- a/oj-client/src/app/app.component.html
+++ b/oj-client/src/app/app.component.html
@@ -1,3 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <!-- <app-problem-list></app-problem-list> -->
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
