--- a/oj-client/src/app/components/problem-detail/problem-detail.component.html
+++ b/oj-client/src/app/components/problem-detail/problem-detail.component.html
@@ -7,9 +7,9 @@
         <p>{{problem.desc}}</p>
     </div>
 
-  <div class = "col-sm-12 col-md-8">
-      <app-editor></app-editor>
-  </div>
+    <div class="hidden-xs col-sm-12 col-md-8">
+     <app-editor></app-editor>
+   </div>
 
 </div>
 </div>
