--- a/oj-client/src/app/components/editor/editor.component.css
+++ b/oj-client/src/app/components/editor/editor.component.css
@@ -1,30 +1,32 @@
-
 @media screen {
   #editor {
     height: 300px;
   }
 
-.lang-select {
-width: 100px;
-margin-right: 10px;
-}
+  .lang-select {
+    width: 100px;
+    margin-right: 10px;
+    display: inline-flex;
+    /* 在select中，谜一样让它们对齐了 */
+  }
 
-header .btn {
-margin: 0 5px;
-}
+  header .btn {
+    margin: 0 5px;
+    display: inline-flex;
+  }
 
-footer .btn {
-margin: 0 5px;
-}
+  footer .btn {
+    margin: 0 5px;
+  }
 
-.editor-footer, .editor-header {
-margin: 10px 0;
-}
+  .editor-footer, .editor-header {
+    margin: 10px 0;
+  }
 
-.cursor {
-/*position:absolute;*/
-background: rgba(0, 250, 0, 0.5);
-z-index: 40;
-width: 2px !important;
-}
+  .cursor {
+    /*position:absolute;*/
+    background: rgba(0, 250, 0, 0.5);
+    z-index: 40;
+    width: 2px !important;
+  }
 }
